[package]
name = "data_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "storage"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.107"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "~4.4", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
dotenv = "0.15"
reqwest = {version = "0.11", features = ["json"]}
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"
async-trait = "0.1.74"
futures-util = "0.3"
futures = "0.3"
flate2 = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
concurrent-queue = "2.4.0"
url = "2.2.2"
queues = "1.0.2"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
log = "0.4.20"
log4rs = "1.0"
miniz_oxide = "0.7.2"