[package]
name = "data_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "storage"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.20.1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"
async-trait = "0.1.74"
futures-util = "0.3"
futures = "0.3"
flate2 = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.2.2"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
log = "0.4.20"
log4rs = "1.0"
lazy_static = "1.4"
